# kaitai_struct_python_runtime

./: .editorconfig  .gitignore  LICENSE  README.md  README.rst  __init__.py  kaitaistruct.py  kaitaistruct.pyi  kaitaistructures.py  pyproject.toml  setup.cfg  setup.py  test_with_micro_python.py
.github/workflows/: build.yml  check-style.yml  release.yml
experimental/: exp_class.py  test.anft
kaitaistruct/: kaitaistruct.py
