[metadata]
name = kaitaistruct
version = attr: kaitaistruct.__version__
author = Kaitai Project
author_email = greycat@kaitai.io
url = https://kaitai.io
project_urls =
    Documentation = https://doc.kaitai.io/
    Code = https://github.com/kaitai-io/kaitai_struct_python_runtime
    Issues = https://github.com/kaitai-io/kaitai_struct_python_runtime/issues
    Gitter = https://gitter.im/kaitai_struct/Lobby
description = Kaitai Struct declarative parser generator for binary data: runtime library for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = kaitai, struct, construct, ksy, declarative, data structure, data format, file format, packet format, binary, parser, parsing, unpack, development
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = True
include_package_data = True
py_modules = kaitaistruct
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
install_requires =
    enum34; python_version < "3.4"
setup_requires =
    setuptools >= 38.6.0

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[pycodestyle]
max-line-length = 140
statistics = True
