[metadata]
name = kaitaistruct
version = attr: kaitaistruct.__version__
author = Kaitai Project
author_email = greycat@kaitai.io
url = https://kaitai.io
project_urls =
    Documentation = https://doc.kaitai.io/
    Code = https://github.com/kaitai-io/kaitai_struct_python_runtime
    Issues = https://github.com/kaitai-io/kaitai_struct_python_runtime/issues
    Gitter = https://gitter.im/kaitai_struct/Lobby
description = Kaitai Struct declarative parser generator for binary data: runtime library for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = kaitai, struct, construct, ksy, declarative, data structure, data format, file format, packet format, binary, parser, parsing, unpack, development
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = True
include_package_data = True
py_modules = kaitaistruct
python_requires = >=3.8
setup_requires =
    setuptools >= 38.6.0
